Travel::Status::DE::DBRIS 0.06 - sat Mar 01 2025

    * DBRIS: Fix new_p constructor
    * JourneyAtStop->via: return list, not arrayref
    * dbris-m: support raw station IDs as input

Travel::Status::DE::DBRIS 0.05 - Mon Feb 03 2025

    * Journey, Location: Add missing conversions to TO_JSON
    * dbris-m: Fix --json

Travel::Status::DE::DBRIS 0.04 - Sat Feb 01 2025

    * Add Travel::Status::DE::DBRIS::Formation and submodules to this
      distribution (formerly Travel::Status::DE::DBWagenreihung)
    * dbris-m: Run "dbris-m station train_type train_no" to list train
      details and (if available) carriage formation

Travel::Status::DE::DBRIS 0.02 - Sat Jan 25 2025

    * dbris-m: Add -m / --modes-of-transit option
    * dbirs-m: Fix --json

Travel::Status::DE::DBRIS 0.01 - Mon Jan 06 2025

    * Initial release
    * Supports station board requests, trip details, and station search